ukui-panel (2.0.6-2kylin2) v100; urgency=medium

  * Redebuild for v10

 -- hepuyao <hepuyao@kylinos.cn>  Mon, 23 Mar 2020 12:35:10 +0800

ukui-panel (2.0.2-1) unstable; urgency=medium

  * New upstream release:
    - Update the UI of calendar by new design.
    - Update the UI of plugin ukui-flash-disk.
    - Fix the wrong position when panel changed direction.

 -- handsome_feng <jianfengli@ubuntukylin.com>  Sat, 21 Mar 2020 16:52:54 +0800

ukui-panel (2.0.1-1) unstable; urgency=medium

  * New upstream release:
    - Fix build under Arch.
    - Fix the error when click calendar.
    - Fix the error when show preview.
    - Adjust the style.
    - Add dbus interface.
    - Add disk plugin.
    - Add close button to preview.
    - Add tray storage area.
  * debian/control:
    - Add libpoppler-dev, libpopplet-qt5-dev and libpeony-dev to
      build-depends.

 -- handsome_feng <jianfengli@ubuntukylin.com>  Thu, 12 Mar 2020 10:45:13 +0800

ukui-panel (2.0.0-1) unstable; urgency=medium

  * New upstream release.
    - Migrate from gtk to qt.
  * Debian/{control,compat}:
    - Use debhelper-compat notation.
    - Bump standards-version to 4.5.0.
    - Set Rules-Requires-Root to no.

 -- handsome_feng <jianfengli@ubuntukylin.com>  Sun, 02 Feb 2020 14:07:37 +0800

ukui-panel (1.1.6-1) unstable; urgency=medium

  * Change the default grouping type of window-list.
  * Fix that window-list disappears after multi restart.
  * Update the copyright.
  * debian/control:
    - Bump standards-version to 4.4.0.
    - Drop mate-polkit.

 -- handsome_feng <jianfengli@ubuntukylin.com>  Wed, 07 Aug 2019 11:25:09 +0800

ukui-panel (1.1.5-1) unstable; urgency=medium

  * Update es.po, fr.po, pt.po, ru.po.
  * Update the theme when system theme changes.
  * Fix the bug that window-list disappears accidentally.
  * Fix the bug that the icon stuck after multiple clicks.
  * Fix the bug that can't move the applet to the right of window-list.
